--- a/Almacen.csproj
+++ b/Almacen.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Vistas\Proveedores\frmABMSProveedores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
