--- a/Almacen.csproj
+++ b/Almacen.csproj
@@ -22,6 +22,9 @@
     <Compile Update="Vistas\Proveedores\frmABMSProveedores.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\Proveedores\frmAMCProveedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
