--- a/Almacen.csproj
+++ b/Almacen.csproj
@@ -13,6 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Vistas\Grupos\frmABMSGrupos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Vistas\Grupos\frmAMCGrupo.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Vistas\Productos\frmABMSProductos.cs">
       <SubType>Form</SubType>
     </Compile>
