--- a/Almacen.csproj
+++ b/Almacen.csproj
@@ -31,6 +31,12 @@
     <Compile Update="Vistas\Proveedores\frmAMCProveedor.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\Usuarios\frmABMSUsuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Vistas\Usuarios\frmAMCUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
