--- a/Almacen.csproj
+++ b/Almacen.csproj
@@ -22,6 +22,9 @@
     <Compile Update="Vistas\Permisos\frmABMSPermisos.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\Permisos\frmAMCPermiso.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Vistas\Productos\frmABMSProductos.cs">
       <SubType>Form</SubType>
     </Compile>
