--- a/Almacen.csproj
+++ b/Almacen.csproj
@@ -22,6 +22,15 @@
     <Compile Update="Vistas\Compras\Pedidos\frmAMCPedido.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\Deposito\Recepcion\frmABMSRecepciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Vistas\Deposito\Recepcion\frmAMCDetalleRecepcion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Vistas\Deposito\Recepcion\frmAMCRecepcion.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Vistas\Sistema\Grupos\frmABMSGrupos.cs">
       <SubType>Form</SubType>
     </Compile>
