--- a/Almacen.csproj
+++ b/Almacen.csproj
@@ -16,6 +16,12 @@
     <Compile Update="Vistas\Administracion\Productos\frmCostosProductos.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\Cliente\frmABMSClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Vistas\Cliente\frmAMCCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Vistas\Compras\Pedidos\frmABMSPedidos.cs">
       <SubType>Form</SubType>
     </Compile>
