--- a/Almacen.csproj
+++ b/Almacen.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
@@ -41,6 +42,9 @@
     <Compile Update="Vistas\Deposito\Recepcion\frmAMCRecepcion.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\frmMostrarMensajeDetalle.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Vistas\Sistema\Grupos\frmABMSGrupos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +75,10 @@
     <Compile Update="Vistas\Sistema\Usuarios\frmAMCUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Clases\Base\Comprobante\" />
   </ItemGroup>
 
 </Project>
